# frozen

./: CHANGELOG.md  README.md  setup.cfg
src/frozen/: __init__.py  alienatable.py  core.py  freezable.py  lockable.py
