[metadata]
name = frozen-msaremi
version = alpha
author = Mehrzad Saremi
author_email = mehrzad.saremi@aut.ac.ir
description = A geeky python package for immutability and lockability of python objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msaremi/frozen/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
